--- a/index.html
+++ b/index.html
@@ -248,10 +248,15 @@
       margin: 0;
       padding: 0;
     }
-    #map, #pano {
+    #map {
       float: left;
       height: 30%;
-      width: 50%;
+      width: 100%;
+    }
+    #pano {
+      float: left;
+      height: 30%;
+      width: 100%;
     }
   </style>
 
