--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Wedding Invitation">
+  <meta name="author" content="Jihoon Kim">
+  <meta property="og:title" content="Invitaion Letter!"/>
+  <meta property="og:image" content="img/bg_org.jpg">
+  <meta property="og:description" content="10/25(Sun)"/>
 
-  <title>Stylish Portfolio - Start Bootstrap Theme</title>
+
+
+  <title>JH & ASTA</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
