thumb nail picture change

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Wedding Invitation">
   <meta name="author" content="Jihoon Kim">
-  <meta property="og:title" content="Invitaion Letter!"/>
-  <meta property="og:image" content="img/bg_org.jpg">
-  <meta property="og:description" content="10/25(Sun)"/>
+  <meta property="og:title" content="Kindly Invite to Our Wedding!"/>
+  <meta property="og:image" content="img/lock_kaunas.jpg">
+  <meta property="og:description" content="Place, Seoul, Korea(Date)"/>
 
 
 
@@ -46,9 +46,9 @@
         <span class = "header__name-pink"> &amp; </span>
         ASTA
     </h1>
-    <h3>Free Bootstrap Themes &amp; Templates</h3>
+    <h3>2020.XX.XX</h3>
+    <h3>We Are Getting Married!</h3>
     <br>
-    <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
     </div>
     </section>
 </header>
