--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=medium-dpi" />
+  <!---   <meta name="viewport" content="width=device-width, initial-scale=1">  Original---> 
   <meta name="description" content="Wedding Invitation">
   <meta name="author" content="Jihoon Kim">
   <meta property="og:title" content="Kindly Invite to Our Wedding!"/>
