--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+
+
+<head>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=medium-dpi" />
-  <!---   <meta name="viewport" content="width=device-width, initial-scale=1">  Original---> 
   <meta name="description" content="Wedding Invitation">
   <meta name="author" content="Jihoon Kim">
   <meta property="og:title" content="Kindly Invite to Our Wedding!"/>
@@ -19,6 +20,7 @@
 
   <!-- Bootstrap Core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link rel="shortcut icon" href="img/heart.png">
 
   <!-- Custom CSS -->
   <link href="css/stylish-portfolio.css" rel="stylesheet">
@@ -37,18 +39,21 @@
 </head>
 
 
+
+
 <body>
+
 
   <header id="top" class="header">
     <section class="header delay-animation animated fadeInDown">
     <div class="text-vertical-center">
-    <h1 class = "neon header__name">
-        JIHOON
-        <span class = "header__name-pink"> &amp; </span>
-        ASTA
-    </h1>
-    <h3>2020.XX.XX</h3>
-    <h3>We Are Getting Married!</h3>
+
+    <hh1 class="console-container"> <span id='text'></span><hh1 class='console-underscore' id='console'>&#95;</hh1> </hh1>
+    <br>
+    <br>
+    <br>
+    <h2>2020.XX.XX</h2>
+    <h3 class="neon header__words">We Are Getting Married!</h3>
     <br>
     </div>
     </section>
@@ -249,7 +254,7 @@
 </section>
 
 <style>
-    html, body {
+    html{
       height: 100%;
       margin: 0;
       padding: 0;
@@ -312,7 +317,6 @@
 <!-- Custom Theme JavaScript -->
 <script src="js/custom.js"></script> 
 
-  
 </body>
 
 </html>
