--- a/index.html
+++ b/index.html
@@ -43,17 +43,16 @@
 
 <body>
 
-
   <header id="top" class="header">
     <section class="header delay-animation animated fadeInDown">
     <div class="text-vertical-center">
 
-    <hh1 class="console-container"> <span id='text'></span><hh1 class='console-underscore' id='console'>&#95;</hh1> </hh1>
+    <hh1 class="neon1 header__name"> <span id='text'></span><hh1 class='console-underscore' id='console'>&#95;</hh1> </hh1>
     <br>
     <br>
     <br>
     <h2>2020.XX.XX</h2>
-    <h3 class="neon header__words">We Are Getting Married!</h3>
+    <h3 class="neon2 header__words">We Are Getting Married!</h3>
     <br>
     </div>
     </section>
