--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
   <!-- Custom CSS -->
   <link href="css/stylish-portfolio.css" rel="stylesheet">
+  <link href="css/animate/animate.min.css" rel="stylesheet">
 
   <!-- Custom Fonts -->
   <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -47,28 +48,17 @@
     <section class="header delay-animation animated fadeInDown">
     <div class="text-vertical-center">
 
-    <hh1 class="neon1 header__name"> <span id='text'></span><hh1 class='console-underscore' id='console'>&#95;</hh1> </hh1>
-    <br>
-    <br>
-    <br>
-    <h2>2020.XX.XX</h2>
+  <!--  <hh1 class="neon1 header__date"> <span id='text'></span><hh1 class='console-underscore' id='console'>&#95;</hh1> </hh1> -->
+    <h1 class="header__name">Jihoon & Asta</h1>
+    <h2 class="header__date">2020.XX.XX</h2>
     <h3 class="neon2 header__words">We Are Getting Married!</h3>
     <br>
     </div>
     </section>
 </header>
 
-  <section id="about" class="about">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-        <p class="lead">This theme features some wonderful photography courtesy of <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
-      </div>
-    </div>
-    <!-- /.row -->
-  </div>
-  <!-- /.container -->
+<section>
+<img class="greeting__bg_img"  src="img/wed_bg.jpg">
 </section>
 
   <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
