--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </header>
 
 <section>
-<img class="greeting__bg_img"  src="img/wed_temp.jpg">
+<img class="greeting__bg_img"  src="img/wed_bg_temp.jpg">
 </section>
 
   <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
